# agent-compose

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_smoke.py  run_tests.py  run_webbridge.py  verify_e2e.py  verify_mcp.py  verify_webbridge_e2e.py
agent_compose/: __init__.py  agent_loader.py  agent_runner.py  agent_runtime.py  agent_runtime_server.py  agentos_client.py  cli.py  compat_v30.py  config_resolver.py  definition_loader.py  deploy_cli.py  deployer.py  hot_reload.py  i18n.py  kimi_webbridge_client.py  llm_client.py  log_rotation.py  market_client.py  mcp_builder.py  mcp_sse_client.py  mcp_stdio_client.py  observability.py  orchestrator.py  pipeline_engine.py  remote_loader.py  resilience.py  resource_limits.py  session_store.py  skill_mcp_resolver.py  team_loader.py  templates.py  wizard.py  workflow_loader.py
agent_compose/adapters/: __init__.py  base.py  claude.py  codebuddy.py  cursor.py  generic.py  github.py  jetbrains.py  openai_gpts.py  vscode.py
agent_compose/mcp_servers/: __init__.py  simple_mcp_server.py
tests/: conftest.py  test_adapters.py  test_agent_loader.py  test_agent_runtime_integration.py  test_agent_runtime_server.py  test_agentos_client.py  test_cli.py  test_config_resolver.py  test_definition_loader.py  test_deployer.py  test_llm_client.py  test_market_client.py  test_mcp_builder.py  test_mcp_stdio_client.py  test_observability.py  test_orchestrator.py  test_packagers.py  test_pipeline_engine.py  test_remote_loader.py  test_session_store.py  test_team_loader.py  test_tools.py  test_workflow_loader.py
(+34 files in other folders)
